--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <body>
     <!-- <script src="./JS/app.js"></script> -->
     <!-- <script src="./JS/problem2.js"></script> -->
-    <script src="./JS/problem3.js"></script>
+    <!-- <script src="./JS/problem3.js"></script> -->
+    <!-- <script src="./JS/problem4.js"></script> -->
+    <script src="./JS/problem5.js"></script>
 </body>
 </html>
