--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <!-- <script src="./JS/problem2.js"></script> -->
     <!-- <script src="./JS/problem3.js"></script> -->
     <!-- <script src="./JS/problem4.js"></script> -->
-    <script src="./JS/problem5.js"></script>
+    <!-- <script src="./JS/problem5.js"></script> -->
+    <!-- <script src="./randomPractice.js"></script> -->
+    <!-- <script src="./JS/problem6.js"></script> -->
+     <script src="./JS/problem7.js"></script>
 </body>
 </html>
